5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1582_1332.log
== TEST (2019-03-12 17:44:00) 
-- CODE:
aresta =
area = 
 
print(round(3.23, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:44:01) 
-- CODE:
aresta =
area = 
 
print(round(3.23, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:09) 
-- CODE:
aresta =
area = 
 
print(round(14.73, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:11) 
-- CODE:
aresta =
area = 
 
print(round(14.73, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:13) 
-- CODE:
aresta =
area = 
 
print(round(14.73, 4))
-- EXECUTION TIME:
0.150024
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 1
    aresta =
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:14) 
-- CODE:
aresta =
area = 
 
print(round(14.73, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:42) 
-- CODE:
aresta =
area = 
 
print(round(13+1.73, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:43) 
-- CODE:
aresta =
area = 
 
print(round(13+1.73, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:48:43) 
-- CODE:
aresta =
area = 
 
print(round(25.95/2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:48:44) 
-- CODE:
aresta =
area = 
 
print(round(25.95/2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:48:45) 
-- CODE:
aresta =
area = 
 
print(round(25.95/2, 4))
-- EXECUTION TIME:
0.134614
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 1
    aresta =
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:48:47) 
-- CODE:
aresta =
area = 
 
print(round(25.95/2, 4))
-- EXECUTION TIME:
0.153857
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 1
    aresta =
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:48:51) 
-- CODE:
aresta =
area = 
 
print(round(26/2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:48:53) 
-- CODE:
aresta =
area = 
 
print(round(26/2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:25:07) 
-- CODE:
aresta =
area = 
 
print(round(3/2*8.66, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:25:12) 
-- CODE:
aresta =
area = 
 
print(round(3/2*8.66, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:25:18) 
-- CODE:
aresta =
area = 
 
print(round(3/2*8.66, 4))
-- EXECUTION TIME:
0.179554
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 1
    aresta =
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:33:21) 
-- CODE:
print(round(3/2*1.73 5**2, 4))
-- ERROR:
File "XXXX", line 1
    print(round(3/2*1.73 5**2, 4))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:33:26) 
-- CODE:
print(round(3/2*1.73 5**2, 4))
-- EXECUTION TIME:
0.207679
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 1
    print(round(3/2*1.73 5**2, 4))
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:02:29) 
-- CODE:
print(round(3/2*((3*5)**2)**1/2),4)
-- OUTPUT:
169 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:02:32) 
-- CODE:
print(round(3/2*((3*5)**2)**1/2),4)
-- EXECUTION TIME:
0.197492
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
169 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:02:37) 
-- CODE:
print(round(3/2*((3*5)**2)**1/2),4)
-- OUTPUT:
169 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:02:39) 
-- CODE:
print(round(3/2*((3*5)**2)**1/2),4)
-- OUTPUT:
169 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:02:39) 
-- CODE:
print(round(3/2*((3*5)**2)**1/2),4)
-- OUTPUT:
169 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:02:42) 
-- CODE:
print(round(3/2*((3*5)**2)**1/2),4)
-- EXECUTION TIME:
0.168091
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
169 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:02:47) 
-- CODE:
print(round(3/2*((3*5**2)**1/2),4)
-- ERROR:
File "XXXX", line 2
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:02:50) 
-- CODE:
print(round(3/2*((3*5**2)**1/2),4)
-- ERROR:
File "XXXX", line 2
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:02:56) 
-- CODE:
print(round(3/2*((3*5)**2)**1/2),4)
-- EXECUTION TIME:
0.156926
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
169 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:03:18) 
-- CODE:
print(round(3/2*((3*5)**2)**1/2),4)
-- OUTPUT:
169 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:03:20) 
-- CODE:
print(round(3/2*((3*5)**2)**1/2),4)
-- OUTPUT:
169 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:05:46) 
-- CODE:
aresta = 5
area = print(round(3/2*((3*5)**2)**1/2),4)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:06:42) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(area, 4))
-- OUTPUT:
168.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:06:45) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.146326
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
168.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:06:51) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(area, 4))
-- OUTPUT:
168.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:06:53) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.135486
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
168.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:09:01) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(area, 4))
-- OUTPUT:
168.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:09:18) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(168.75, 4))
-- OUTPUT:
168.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:09:21) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(168.75, 4))
-- EXECUTION TIME:
0.151344
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
168.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:09:28) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(168.75, 4))
-- OUTPUT:
168.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:09:29) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(168.75, 4))
-- OUTPUT:
168.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:10:28) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(area, 4))
-- OUTPUT:
168.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:10:58) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(168.75, 4))
-- OUTPUT:
168.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:11:12) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(area, 4))
-- OUTPUT:
168.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:11:24) 
-- CODE:
aresta = 5
area = (3/2*((3*aresta)**2)**1/2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.155145
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
168.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:13:53) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:14:00) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.227006
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:14:57) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:15:07) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.185403
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:15:07) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.159822
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:15:08) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.120847
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:15:08) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.157602
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:15:08) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.128022
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:15:54) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:15:59) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.22718
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:18:28) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:18:35) 
-- CODE:
aresta = 5
area = 3/2*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.140476
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:19:25) 
-- CODE:
aresta = 5
area = 3/2*3**1/2*aresta**2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:19:28) 
-- CODE:
aresta = 5
area = 3/2*3**1/2*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.213497
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:20:26) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta**2)**1/2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:20:31) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta**2)**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.151774
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:21:14) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:21:18) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.190788
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:21:22) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:21:26) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta**2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.14383
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:22:02) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*aresta**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:22:06) 
-- CODE:
aresta = 5
area = 3/2*(3**0.5)*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.162566
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:38:13) 
-- CODE:
aresta = 5
area = 3/2*3**1/2*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:38:17) 
-- CODE:
aresta = 5
area = 3/2*3**1/2*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.193609
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:38:24) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:38:27) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.151916
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:48:25) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.137538
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:48:27) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.132529
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:48:47) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.195803
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:19:32) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:19:35) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.245244
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:23:02) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.135249
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:23:04) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.200529
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:23:05) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:23:07) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.150811
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:29:48) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.206341
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:00:32) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.158835
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:56:47) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4)) 
-- EXECUTION TIME:
0.163044
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:09:07) 
-- CODE:
aresta = 5
area = 3/2*3**0.5*(aresta**2)
 
print(round(area, 4)) 
-- EXECUTION TIME:
0.202911
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
